--- a/app/public/create.html
+++ b/app/public/create.html
@@ -13,7 +13,7 @@
       <h1>Re:ゼロから始めるユーザー作成</h1>
       <label for="uid">ID</label>
       <input type="text" id="uid" placeholder="自動採番されます" disabled />
-      <label for="name">ユーザー名</label>
+      <label for="name">ユーザー名</label>oono0908
       <input type="text" id="name" />
       <label for="profile">プロフィール</label>
       <input type="text" id="profile" />
