--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,12 +1,10 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Re:ゼロから始めるWeb API入門実践編</title>
   <!-- Load scripts -->
-  <!-- <script src="js/search.js" defer></script> -->
+  <script src="js/search.js" defer></script>
   <script src="js/users.js" defer></script>
   <script src="js/index.js" defer></script>
 </head>
@@ -30,7 +28,7 @@
         </tr>
       </thead>
       <tbody id="users-list">
-        
+
       </tbody>
     </table>
   </main>
